# mykernel

./: .gdbinit  .gitignore  Makefile  README.md  configure.ac  file  headers.sh  kernel.c  qemu.sh  setup.sh
scripts/: install_headers.sh  is_multiboot.sh  setup_compiler.sh
src/: Makefile  asm.h  boot.asm  boot.s  gdt.c  grub.cfg  heap.c  heap.h  idt.c  kernel.c  keyboard.c  keyboard.h  linker.ld  stdio.c  stdio.h  string.c  string.h  tty.c  vga.c  vga.h
src/as/: Makefile  Makefile.am  boot.s  cpuid.s  gdt.s  idt.s  ioport.s  irq.s  paging.s
src/c/: Makefile  Makefile.am  cursor.c  gdt.c  heap.c  idt.c  irq.c  irq_handler.c  kernel.c  keyboard.c  keymap.c  paging.c  stack_protector.c  stdio.c  string.c  timer.c  tty.c  vga.c
src/c/shell/: game.c  neofetch.c  uptime.c
src/crt/: crt0.s
src/include/: asm.h  heap.h  irq.h  stdio.h  stdlib.h  string.h  types.h  unistd.h  vga.h
src/include/source/: cpuid.h  cursor.h  gdt.h  heap.h  idt.h  irq.h  irq_handler.h  kernel.h  keyboard.h  keymap.h  paging.h  stack_protector.h  stdio.h  string.h  timer.h  tty.h  vga.h
src/include/source/shell/: game.h  neofetch.h  uptime.h
